experiment_output/error_log/nondex-e13mort-GradleTaskTimerPlugin.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task296/wd/NonDex-plugin-test/github.com/e13mort/GradleTaskTimerPlugin/src/main/java/com/github/e13mort/gtt/GradleTaskTimerPlugin.java:39: error: constructor Clock in class Clock cannot be applied to given types;
            clock = new Clock();
                    ^
  required: long
  found: no arguments
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task296/wd/NonDex-plugin-test/github.com/e13mort/GradleTaskTimerPlugin/src/main/java/com/github/e13mort/gtt/GradleTaskTimerPlugin.java:44: error: cannot find symbol
            timings.add(new TaskTimingInfo(task.getName(), clock.getTimeInMs()));
                                                                ^
  symbol:   method getTimeInMs()
  location: variable clock of type Clock
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task296/wd/NonDex-plugin-test/github.com/e13mort/GradleTaskTimerPlugin/src/main/java/com/github/e13mort/gtt/GradleTaskTimerPlugin.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 19s
